# HEIDA

./: Cargo.toml  README.md  TODO.txt  activity_monitoring_net.json  requirements.txt
examples/activity_monitoring/: Cargo.toml
examples/basic_operations/: README.md
examples/cardiac_risk_tree/: README.md  tutorial_cardio.ipynb
examples/glycaemic_status/: Cargo.toml  README.md
examples/logistic_regression/: nb1_prepare_data.ipynb  nb2_analysis.ipynb
examples/test_performance/: B1_basic_stats.ipynb  B2_boot_stats.ipynb  B3_neuron_stats.ipynb  Cargo.toml  add_tree_log.txt  basic_scripts.ipynb  basic_stats.ipynb  boot_number_log.txt  boot_numbers_2048b_log.txt  boot_numbers_256_log.txt  boot_range_2048a_log.txt  boot_range_2048b_log.txt  creat_bs_keys_log.txt  creat_sk_keys_log.txt  dot_prod_log.txt  mul_real_log.txt  mul_tree_log.txt  notes.txt
legacy_examples/: Cargo.toml  LICENSE  README.md  requirements.txt
legacy_examples/basic_operations/: Cargo.toml  README.md
legacy_examples/cardiac_risk_tree/: Cargo.toml
legacy_examples/federated_learning/: Cargo.toml  README.md  nb0_requirements.ipynb  nb1_data_preprocess.ipynb  nb2_centralized.ipynb  nb3_distributed_CKKS.ipynb  nb4_distributed_TFHE.ipynb  nb5_stats_logres.ipynb  nb6_MedMNIST.ipynb  nb6_MedMNIST_master.ipynb  nb7_stats_medmnist.ipynb  nb8_filesize_stats.ipynb
legacy_examples/logistic_regression/: Cargo.toml  nb1_prepare_data.ipynb
legacy_examples/test_performance/: B1_basic_stats.ipynb  B4_boot_range.ipynb  Cargo.toml  basic_scripts-Copy1.ipynb  basic_scripts-Copy2.ipynb
python_binds/: Cargo.toml  calc_pi.py  heida_python.py  tests.ipynb
python_binds/src/: _lib-old.rs  lib.rs
python_examples/cardiac_risk_tree/: README.md  nb1_cardiac_risk_score.ipynb
python_examples/federated_analysis/: nb1_stand_alone_math.ipynb  utilities.py  utils.py
python_examples/federated_learning/: README.md  nb0_requirements.ipynb  nb1_logistic_regression.ipynb  nb2_resnet_medmnist.ipynb
python_examples/glycemic_status/: nb1_Personal_Glycemic_Status.ipynb
python_examples/logistic_regression/: nb1_data.ipynb  nb2_analysis.ipynb
src/: bin.rs  lib.rs  main.rs
