[package]
name = "HEIDA"
version = "0.1.0"
edition = "2021"
authors = ["Henrik Forsgren <henrik.forsgren@ri.se>", "Rickard Brännvall <rickard.brannvall@ri.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
concrete = { version = "0.1.9"}
itertools="0.9.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 16