[package]
name = "python_binds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "heida"
crate-type = ["cdylib"]

[dependencies]
concrete = { version = "=0.1.9"}
itertools="0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

[dependencies.pyo3]
version = "0.14.4"
features = ["extension-module"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1