[package]
name = "HEIDA"
version = "0.1.0"
edition = "2021"
authors = ["Henrik Forsgren <henrik.forsgren@ri.se>", "Rickard Brännvall <rickard.brannvall@ri.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "../../src/lib.rs"

[[bin]]
name = "activity_monitoring"
path = "src/bin/activity_monitoring.rs"

[dependencies]
concrete = { version = "=0.1.9"}
itertools="0.9.0"
rayon="^1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"