[package]
name = "test_performance"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = "0.1.9"
concrete-npe = "0.1.9"
concrete-commons = "*"
ndarray = "*"
ndarray-csv = "*"
csv = "*"
serde = "*"
